[package]
name = "extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
env_logger = "0.10.1"
log = "0.4.20"
chrono = "0.4.31"
tokio = { version = "1.14.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
flate2 = "1.0.28"
hyper = { version = "1.1.0", features = ["client"] }
http-body-util = "0.1"
hyper-util = { version = "0.1.2", features = ["full"] }
rand = "0.8.5"
futures = "0.3.30"
thiserror = "1.0.16"
url = "2.4.0"
flume = "0.11"
httpdate = "1.0.3"
pin-project-lite = "0.2.13"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
uuid = "1.6.1"
httparse = "1.8.0"
lambda_runtime = "0.9.0"
# https://github.com/awslabs/aws-lambda-rust-runtime/tree/main/lambda-extension
lambda-extension = "0.9.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"] }
tower = "0.4.13"

# rustls
rustls = { version = "0.22.1" }
rustls-native-certs = { version = "0.7.0" }
tokio-rustls = { version = "0.25.0" }
rustls-pki-types = { version = "1.1.0" }
bytes = "1.6.0"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16.0"

[dev-dependencies]
# ntest = "0.9.2"
httpmock = "0.7.0"
regex = "1.10.4"
axum = "0.7.5"
hyper = { version = "1.1.0", features = ["server"] }

